--- a/static/index.html
+++ b/static/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Snake 3D</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>snake-3d-cpp</title>
   <link rel="stylesheet" href="index.css" />
   <script defer src="index.js"></script>
 </head>
 
 <body>
-  <canvas id="canvas" width="1000" height="500"></canvas>
+  <canvas id="canvas"></canvas>
 </body>
 
 </html>
